--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,10 +60,9 @@
                 android:value="com.comoelagua.android.braille.MainActivity" />
         </activity>
         <activity
-            android:name=".CharactersActivity"
-            android:label="@string/title_activity_characters"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".FontTestActivity"
+            android:label="@string/title_activity_font_test"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
