--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,8 +31,8 @@
         <activity
             android:name=".WordExercisesActivity"
             android:label="@string/title_activity_word_exercises"
-            android:windowSoftInputMode="stateVisible"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
@@ -39,8 +40,8 @@
         <activity
             android:name=".PhraseExercisesActivity"
             android:label="@string/title_activity_phrase_exercises"
-            android:windowSoftInputMode="stateVisible"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
@@ -48,8 +49,8 @@
         <activity
             android:name=".CharactersExercisesActivity"
             android:label="@string/title_activity_characters_exercises"
-            android:windowSoftInputMode="stateVisible"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
@@ -81,8 +82,8 @@
         <activity
             android:name=".NumbersExercisesActivity"
             android:label="@string/title_activity_numbers_exercises"
-            android:windowSoftInputMode="stateVisible"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
@@ -95,7 +96,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.comoelagua.android.braille.MainActivity" />
         </activity>
-
     </application>
 
 </manifest>
